--- a/api/docker/common/nginx/conf.d/default.conf
+++ b/api/docker/common/nginx/conf.d/default.conf
@@ -12,6 +12,7 @@ server {
 
     # Задаём переменную с многократно используемым параметром PHP-FPM
     set $php_pass api-php-fpm:9000;
+    #set $php_pass unix:/var/run/php8.3-fpm.sock;
 
     # Подставляем свою страницу обработки некоторых ошибок сервиса
     #error_page 500 502 503 504 /maintenance.html;
