--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,36 @@
 services:
-    gateway:
-        build:
-            context: gateway/docker
-            dockerfile: development/nginx/DockerFile
+    traefik:
+        image: traefik:3.3
+        command:
+            --providers.docker=true
+            --providers.docker.exposedByDefault=false
+            --entryPoints.http.address=:80
         ports:
-            - "8080:8080"
-            - "8082:8082"
-        depends_on:
-            - frontend
-            - api
+            - "80:80"
+        networks:
+            - traefik-public
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock:ro
+        labels:
+            - traefik.enable=true
+            - traefik.docker.network=traefik-public
     frontend:
         build:
             context: frontend/docker
             dockerfile: development/nginx/DockerFile
-        volumes:
-            - ./frontend:/app
+        networks:
+            - traefik-public
+            - default
+        labels:
+            - traefik.enable=true
+            - traefik.docker.network=traefik-public
+            - traefik.http.routers.frontend.rule=Host(`localhost`) || Host(`www.localhost`)
+            - traefik.http.routers.frontend.entryPoints=http
+            - traefik.http.services.frontend.loadBalancer.server.port=80
+            - traefik.http.middlewares.frontend-redirect.redirectRegex.regex=^(https?://)www.localhost/(.*)$$
+            - traefik.http.middlewares.frontend-redirect.redirectRegex.replacement=$${1}localhost/$${2}
+            - traefik.http.middlewares.frontend-redirect.redirectRegex.permanent=true
+            - traefik.http.routers.frontend.middlewares=frontend-redirect
             
     api:
         build: 
@@ -22,8 +38,15 @@ services:
             dockerfile: development/nginx/DockerFile
         volumes:
             - ./api:/app
-        depends_on:
-            - api-php-fpm
+        networks:
+            - traefik-public
+            - default
+        labels:
+            - traefik.enable=true
+            - traefik.docker.network=traefik-public
+            - traefik.http.routers.api.rule=Host(`yurkas.localhost`)
+            - traefik.http.routers.api.entryPoints=http
+            - traefik.http.services.api.loadBalancer.server.port=80
 
     api-php-fpm:
         build: 
@@ -49,8 +72,8 @@ services:
         image: mysql:8.0
         restart: always
         environment:
-            MYSQL_DATABASE: app
-            MYSQL_USER: app
+            MYSQL_DATABASE: yurkas
+            MYSQL_USER: yurkas
             MYSQL_PASSWORD: secrets
             MYSQL_ROOT_PASSWORD: rootpassword
         volumes:
@@ -60,3 +83,7 @@ services:
 
 volumes:
     api-mysql:
+
+networks:
+    traefik-public:
+        name: traefik-public
