--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,4 @@
-services:
-    traefik:
-        image: traefik:3.3
-        command:
-            --providers.docker=true
-            --providers.docker.exposedByDefault=false
-            --entryPoints.http.address=:80
-        ports:
-            - "80:80"
-        networks:
-            - traefik-public
-        volumes:
-            - /var/run/docker.sock:/var/run/docker.sock:ro
-        labels:
-            - traefik.enable=true
-            - traefik.docker.network=traefik-public
-    frontend:
-        build:
-            context: frontend/docker
-            dockerfile: development/nginx/DockerFile
-        networks:
-            - traefik-public
-            - default
-        labels:
-            - traefik.enable=true
-            - traefik.docker.network=traefik-public
-            - traefik.http.routers.frontend.rule=Host(`localhost`) || Host(`www.localhost`)
-            - traefik.http.routers.frontend.entryPoints=http
-            - traefik.http.services.frontend.loadBalancer.server.port=80
-            - traefik.http.middlewares.frontend-redirect.redirectRegex.regex=^(https?://)www.localhost/(.*)$$
-            - traefik.http.middlewares.frontend-redirect.redirectRegex.replacement=$${1}localhost/$${2}
-            - traefik.http.middlewares.frontend-redirect.redirectRegex.permanent=true
-            - traefik.http.routers.frontend.middlewares=frontend-redirect
-            
+services:       
     api:
         build: 
             context: api/docker
@@ -44,9 +11,13 @@ services:
         labels:
             - traefik.enable=true
             - traefik.docker.network=traefik-public
-            - traefik.http.routers.api.rule=Host(`yurkas.localhost`)
-            - traefik.http.routers.api.entryPoints=http
-            - traefik.http.services.api.loadBalancer.server.port=80
+            - traefik.http.routers.frontend.rule=Host(`yurkas.localhost`) || Host(`www.yurkas.localhost`)
+            - traefik.http.routers.frontend.entryPoints=http
+            - traefik.http.services.frontend.loadBalancer.server.port=80
+            - traefik.http.middlewares.frontend-redirect.redirectRegex.regex=^(https?://)www.yurkas.localhost/(.*)$$
+            - traefik.http.middlewares.frontend-redirect.redirectRegex.replacement=$${1}yurkas.localhost/$${2}
+            - traefik.http.middlewares.frontend-redirect.redirectRegex.permanent=true
+            - traefik.http.routers.frontend.middlewares=frontend-redirect
 
     api-php-fpm:
         build: 
@@ -79,11 +50,11 @@ services:
         volumes:
             - api-mysql:/var/lib/mysql
         ports:
-            - "33061:3306"
+            - "33062:3306"
 
 volumes:
     api-mysql:
 
 networks:
     traefik-public:
-        name: traefik-public
+        external: true
