--- a/api/docker/common/nginx/conf.d/vfd.conf
+++ b/api/docker/common/nginx/conf.d/vfd.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
-    server_name yurkas.localhost www.yurkas.localhost;
     charset utf-8;
     index index.php;
-    root /app/public;
+    root /app/public-vfd;
+    server_name vfd-spb.localhost www.vfd-spb.localhost;
     resolver 127.0.0.11 valid=10s;
     client_max_body_size 1000M;
 
