--- a/api/docker/common/php/conf.d/php.ini
+++ b/api/docker/common/php/conf.d/php.ini
@@ -39,3 +39,6 @@ opcache.revalidate_freq = 0
 session.gc_maxlifetime = 864000
 
 allow_url_fopen = On
+
+session.save_handler = memcache
+session.save_path = "api-memcached:11211"
