--- a/api/docker/development/php-cli/DockerFile
+++ b/api/docker/development/php-cli/DockerFile
@@ -1,7 +1,36 @@
 FROM php:8.3-cli
 
 # Устанавливаем системные зависимости
-RUN apt-get update && apt-get install -y \
+RUN apt-get update \
+    && apt-get install -y \
+        libpng-dev \
+        libjpeg-dev \
+        libfreetype6-dev \
+        libzip-dev \
+        libonig-dev \
+        libicu-dev \
+        libxml2-dev \
+        libpq-dev \
+        curl \
+        libldap2-dev \
+        unzip \
+        git \
+        gnupg2 \
+    && pecl install memcache \
+    && docker-php-ext-enable memcache \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install \
+        gd \
+        bcmath \
+        exif \
+        mysqli \
+        opcache \
+        pdo \
+        pdo_mysql \
+        intl \
+        soap \
+        sockets \
+        zip \
     && pecl install xdebug \
     && docker-php-ext-enable xdebug \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
