--- a/api/docker/development/php/conf.d/xdebug.ini
+++ b/api/docker/development/php/conf.d/xdebug.ini
@@ -1,9 +1,9 @@
-zend_extension=xdebug.so
+;zend_extension=xdebug.so
 xdebug.mode=debug,develop
 xdebug.client_host=host.docker.internal
 xdebug.client_port=9003
 xdebug.discover_client_host=0
 xdebug.log_level=10
 xdebug.idekey=VSCODE
-xdebug.remote_log = /home/rebit-pro/log/xdebug_remote.log
+xdebug.log = /home/rebit-pro/log/xdebug.log
 xdebug.start_with_request=yes
